--- a/template.html
+++ b/template.html
@@ -329,8 +329,7 @@
             <div class="about-content-wrapper-ref">
                 <img src="my_photo.png" alt="个人照片 - 房家辉" class="about-photo-ref" onerror="this.src='https://placehold.co/120x160/eeeeee/999999?text=照片'; this.alt='房家辉个人照片占位图'">
                 <div class="about-text-ref">
-                    <p>我是一名对人工智能充满热情的本科生，目前就读于上海师范大学电子信息工程专业。我的研究兴趣主要集中在具身智能与多模态大模型领域，并对深度学习、自然语言处理和计算机视觉技术有深入学习。</p>
-                    <p>我渴望在研究生阶段继续深入探索这些前沿技术，并为相关的学术和应用发展做出贡献。我具备扎实的数学和编程基础，熟悉Python、C++等编程语言，并有PyTorch、TensorFlow等深度学习框架的使用经验。我乐于接受挑战，具备良好的团队合作和沟通能力。</p>
+                    <p>我叫房家辉，目前是上海师范大学电子信息工程本科生，熟悉硬件嵌入式与算法开发，能够参与数据采集、模型训练与部署全流程；在学习过程中始终坚持脚踏实地、专注细节，善于解决实验与工程中的实际问题。我对前沿技术始终保持浓厚兴趣，尤其关注具身智能与多模态大模型的发展，乐于在团队中不断学习、协作推进技术的真正落地。</p>
                     <div class="mt-4"> 
                         <p class="font-semibold text-base mb-1" style="color: var(--text-primary);">未来研究方向：</p>
                         <ul class="list-none research-interests-list"> 
@@ -472,7 +471,7 @@
                             <div class="tags-container-ref">
                                 <span class="skill-tag-ref">FPGA</span>
                                 <span class="skill-tag-ref">光学计算机</span>
-                                <span class="skill-tag-ref">Vue.js</span>
+                                <span class="skill-tag-ref">可重构</span>
                             </div>
                             <p class="project-description-ref">
                                 <strong>项目内容：</strong> 在FPGA上实现TW-MSD并行加法器，并与多种常用加法器对比验证其速度优势。<br>
